@@ -5,26 +5,30 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.server.ResponseStatusException;
-import org.springframework.validation.FieldError;
-
 import java.time.Instant;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @ControllerAdvice
 public class GlobalExceptionHandler {
 
+    // reuse these keys to satisfy the "define a constant" Sonar suggestions
+    private static final String KEY_TIMESTAMP = "timestamp";
+    private static final String KEY_STATUS = "status";
+    private static final String KEY_ERROR = "error";
+    private static final String KEY_MESSAGE = "message";
+    private static final String KEY_ERRORS = "errors";
+
     @ExceptionHandler(ResponseStatusException.class)
     public ResponseEntity<Map<String,Object>> handleResponseStatus(ResponseStatusException ex) {
         Map<String,Object> body = new HashMap<>();
-        body.put("timestamp", Instant.now());
-        body.put("status", ex.getStatusCode().value());
+        body.put(KEY_TIMESTAMP, Instant.now());
+        body.put(KEY_STATUS, ex.getStatusCode().value());
         HttpStatus httpStatus = HttpStatus.resolve(ex.getStatusCode().value());
-        body.put("error", httpStatus != null ? httpStatus.getReasonPhrase() : "Error");
+        body.put(KEY_ERROR, httpStatus != null ? httpStatus.getReasonPhrase() : "Error");
         // ex.getReason() is the message passed when throwing ResponseStatusException
-        body.put("message", ex.getReason());
+        body.put(KEY_MESSAGE, ex.getReason());
         return new ResponseEntity<>(body, ex.getStatusCode());
     }
 
@@ -34,14 +38,14 @@ public class GlobalExceptionHandler {
                                .getFieldErrors()
                                .stream()
                                .map(f -> f.getField() + ": " + f.getDefaultMessage())
-                               .collect(Collectors.toList());
+                               .toList();
 
         Map<String,Object> body = new HashMap<>();
-        body.put("timestamp", Instant.now());
-        body.put("status", HttpStatus.BAD_REQUEST.value());
-        body.put("error", HttpStatus.BAD_REQUEST.getReasonPhrase());
-        body.put("message", "Validation failed");
-        body.put("errors", errors);
+        body.put(KEY_TIMESTAMP, Instant.now());
+        body.put(KEY_STATUS, HttpStatus.BAD_REQUEST.value());
+        body.put(KEY_ERROR, HttpStatus.BAD_REQUEST.getReasonPhrase());
+        body.put(KEY_MESSAGE, "Validation failed");
+        body.put(KEY_ERRORS, errors);
 
         return new ResponseEntity<>(body, HttpStatus.BAD_REQUEST);
     }
@@ -49,10 +53,10 @@ public class GlobalExceptionHandler {
     @ExceptionHandler(Exception.class)
     public ResponseEntity<Map<String,Object>> handleAny(Exception ex) {
         Map<String,Object> body = new HashMap<>();
-        body.put("timestamp", Instant.now());
-        body.put("status", HttpStatus.INTERNAL_SERVER_ERROR.value());
-        body.put("error", HttpStatus.INTERNAL_SERVER_ERROR.getReasonPhrase());
-        body.put("message", ex.getMessage());
+        body.put(KEY_TIMESTAMP, Instant.now());
+        body.put(KEY_STATUS, HttpStatus.INTERNAL_SERVER_ERROR.value());
+        body.put(KEY_ERROR, HttpStatus.INTERNAL_SERVER_ERROR.getReasonPhrase());
+        body.put(KEY_MESSAGE, ex.getMessage());
         return new ResponseEntity<>(body, HttpStatus.INTERNAL_SERVER_ERROR);
     }
 }
